--- a/style.css
+++ b/style.css
@@ -12,6 +12,24 @@
     border: none;
     text-decoration: none;
     list-style-type: none;
+    font-weight: normal;
+}
+h1 {
+    font-size: 2.4rem;
+    font-weight: 600;
+}
+h2 {
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+h3 {
+    font-size: 1.7rem;
+}
+h4 {
+    font-size: 1.4rem;
+}
+p {
+    font-size: 1.3rem;
 }
 html {
     scroll-behavior: smooth;
@@ -23,22 +41,20 @@ body {
 }
 
 .even {
-    background-color: beige;
+    background-color: #d0ebff;
 }
 
 .odd {
-    background-color: azure;
+    background-color: #e7f5ff;
 }
 
 nav {
-    background-color: #333;
+    background-color: #e7f5ff;
     display: flex;
     justify-content: space-between;
     top: 0;
     left: 0;
     right: 0;
-    /* width: 100%; */
-    /* height: 75px; */
     padding: 1.4rem 10%;
     align-items: center;
     position: fixed;
@@ -47,10 +63,10 @@ nav {
 }
 
 .logo a {
-    /* margin-left: 50px; */
-    color: aliceblue;
+    color: #228be6;
     font-size: 2rem;
-    font-weight: 700;
+    font-weight: 600;
+    text-shadow: 0 0 3px #e9e9e9;
 }
 
 .navigation {
@@ -63,11 +79,11 @@ nav {
 
 .navigation li a {
     padding: 10px 15px;
-    color: aliceblue;
+    color: #228be6;
 }
 
 .navigation li a:hover {
-    background-color: #ffffff;
+    background-color: #228be6;
     color: #333;
     border-radius: 15px;
     transition: all ease-in-out 0.2s;
@@ -85,16 +101,12 @@ nav {
 }
 
 .hero {
-    /* display: flex; */
-    /* align-items: center; */
     min-height: 100vh;
     padding: 1.4rem 10%;
-    /* background-color: rgb(51, 51, 51, .3); */
-    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.3) 0%, rgba(51, 51, 51, 0.3) 80%, var(--tes));
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.3) 0%, rgba(51, 51, 51, 0.3) 80%, #e7f5ff);
 }
 
 .hero-text {
-    /* background-color: aquamarine; */
     position: absolute;
     bottom: 150px;
     color: whitesmoke;
@@ -126,13 +138,12 @@ nav {
 }
 
 .about {
-    background: linear-gradient(to bottom, var(--tes) 0%, var(--tes) 90%, var(--primary));
+    background: linear-gradient(to bottom, #e7f5ff 0%, #e7f5ff 90%, aliceblue);
     margin-bottom: 6rem;
 }
 
 .about h2 {
     text-align: center;
-    font-size: 2.3rem;
     margin-bottom: 3rem;
 }
 
@@ -151,12 +162,11 @@ nav {
     margin: 10px;
 }
 .about-text {
-    font-size: 1.3rem;
     flex: 1 1 28rem;
 }
 
 .about-text h3 {
-    font-size: 1.6rem;
+    font-weight: 600;
     line-height: 50px;
 }
 
@@ -174,28 +184,22 @@ nav {
 
 .product h2 {
     text-align: center;
-    font-size: 2.3rem;
     margin-bottom: 1rem;
 }
 
 .product h3 {
     text-align: center;
-    /* font-size: 1.6rem; */
     font-weight: 400;
     margin-bottom: 1.5rem;
 }
 
 .product {
-    height: 100vh;
     width: 90%;
     margin: 20px auto;
-    align-items: center;
     text-align: center;
 }
 
 .product-grid {
-    /* background-color: #333; */
-    font-size: 2rem;
     max-width: 1350px;
     margin: 50px auto;
     display: flex;
@@ -219,9 +223,45 @@ nav {
     object-fit: cover;
     height: 200px;
 }
+.product-main {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.product-grid-main {
+    flex: 1 1 23rem;
+    order: 2;
+}
+.product-text {
+    flex: 1 1 23rem;
+    order: 1;
+}
 
 .contact {
+    height: 100vh;
     text-align: center;
+}
+.contact ul {
+    background-color: #f1f1f1;
+    display: flex;
+    justify-content: center;
+    font-size: 5rem;
+    padding: 20px;
+}
+.contact ul li a {
+    margin: 2rem;
+}
+.fa-facebook {
+    color: #0055ff;
+}
+.fa-instagram {
+    color: #ff00c3;
+}
+.fa-whatsapp {
+    color: #17a900;
+}
+.fa-phone {
+    color: #878787;
 }
 
 footer {
@@ -229,6 +269,27 @@ footer {
     text-align: center;
     background-color: #333;
     color: aliceblue;
+}
+.whatsapp button {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    font-size: 3rem;
+    padding: 0.8rem 1rem;
+    background-color: #d8d7d7;
+    color: #17a900;
+    border: 1px solid #11ff00;
+    box-shadow: 0 0px 10px 0 #292929;
+    border-radius: 20px;
+    margin: 20px;
+    transition: 0.2s;
+}
+.whatsapp button:hover {
+    transform: translate(0, -15%);
+    background-color: #f1f1f1;
+    color: #11ff00;
+    box-shadow: 0 0px 10px 0 #c8c8c8;
+    text-shadow: 0 0 3px #e9e9e9;
 }
 .nav-footer a {
     padding: 1rem 0;
@@ -241,19 +302,15 @@ footer {
 
 /* -----------------------PRODUCT.php-------------- */
 .product-options {
-    /* position: absolute; */
     padding: 20px;
 }
 .btn-add {
-    /* position: absolute; */
     background-color: #0055ff;
     font-weight: 600;
     color: aliceblue;
     padding: 1em;
     border-radius: 7px;
     font-size: 1rem;
-    /* right: 15%;
-    top: 23%; */
 }
 .btn-change {
     background-color: #11ff00;
@@ -296,8 +353,12 @@ footer {
     background-color: #fd4848;
 }
 
+.title-add {
+    justify-content: space-between;
+    display: flex;
+    margin-bottom: 10px;
+}
 .product-properties {
-    /* max-width: 1350px; */
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -305,26 +366,50 @@ footer {
     /* background-color: #333; */
 }
 .option select {
-    /* background-color: #333; */
-    padding: 0.3rem 1rem;
+    display: block;
+    padding: 6px 10px;
     border-radius: 5px;
+    background-color: #f1f1f1;
     border: 1px solid #989898;
 }
-/* .search {
+/* Style search fieldnya */
+.search input[type="text"] {
+    padding: 6px 50px;
+    border-radius: 6px 0 0 6px;
+    font-size: 1rem;
     border: 1px solid #989898;
-} */
-.search input {
-    padding: 0.3rem 3rem;
-    border: 1px solid #989898;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
 }
+
+/* Style search*/
 .search button {
-    padding: 0.3rem 0;
-    border: 1px solid #989898;
+    float: left;
+    width: 20%;
+    padding: 6px 10px;
+    border-radius: 0 6px 6px 0;
+    background: #2196f3;
+    color: white;
+    font-size: 1rem;
+    border: 1px solid grey;
+    border-left: none; /* Menghindari border double */
+    cursor: pointer;
+}
+
+.search button:hover {
+    background: #0b7dda;
+}
+
+/* Clear float*/
+.search::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 /*///////////////////////////////////////////////////// DETAIL\\\\\\\\ //////////////////////////////////////*/
 .detail {
-    font-size: 1.5rem;
     width: 90%;
     margin: 120px auto;
 }
@@ -334,36 +419,30 @@ footer {
     box-sizing: border-box;
     padding: 20px;
     box-shadow: 2px 2px 8px 0px #ccced1;
-    /* border: 1 px solid #989898; */
-    /* background-color: #333; */
 }
-.deskripsi h2 {
+.deskripsi h1 {
     margin: 1rem 0px;
 }
 .atas {
     display: flex;
-    flex: wrap;
     margin: 20px auto;
     justify-content: space-between;
     width: 90%;
     padding: 10px;
-    background-color: #fff;
+    background-color: aliceblue;
     border-radius: 2%;
 }
 .data {
     order: 2;
-    font-size: 1.3rem;
     flex: 1 1 28rem;
-    margin: 50px auto;
-    padding: 30px;
+    margin: 50px 10px;
 }
 .data span {
     font-weight: lighter;
 }
 .image-carousel {
+    margin: 0 10px;
     order: 1;
-    /* padding: 10px; */
-    /* width: 500px; */
     max-width: 700px;
     box-shadow: 2px 2px 8px 0px #ccced1;
     flex: 1 1 30rem;
@@ -376,7 +455,7 @@ footer {
 
 .owl-item img {
     height: 30rem;
-    /* aspect-ratio: 16/9; */
+    object-position: center;
     object-fit: cover;
 }
 
@@ -437,6 +516,18 @@ footer {
     html {
         font-size: 75%;
     }
+    .atas {
+        flex-wrap: wrap;
+    }
+    .image-carousel {
+        width: 500px;
+    }
+}
+
+@media (max-width: 1297px) {
+    .product-main {
+        flex-wrap: wrap;
+    }
 }
 
 /* Tablet */
@@ -452,37 +543,40 @@ footer {
         display: block;
         font-size: 2.6rem;
         margin-top: 50px;
-        width: 40%;
+        width: 50%;
         height: 100vh;
         top: 0;
-        left: 0;
+        left: -100%;
         background-color: rgba(51, 51, 51, 0.7);
+        transition: 0.3s;
+    }
+    .navigation.active {
+        left: 0;
     }
     .navigation li {
-        /* background-color: #0055ff; */
         margin: 30px auto;
         padding-right: 10px;
     }
 
+    .navigation li a {
+        color: #e7f5ff;
+    }
     .navigation li a:hover {
         padding: 10px 15px;
-        /* color: aliceblue; */
         background-color: inherit;
     }
     .openbtn {
         display: inline;
+        position: absolute;
+        left: 0;
+        margin-left: 4rem;
+        padding: 0.8rem 1.2rem;
+        border-radius: 5px;
     }
     .about-content {
         flex-wrap: wrap;
     }
-    .atas {
-        flex-wrap: wrap;
-    }
     .about-content div {
-        width: 100%;
-        margin: 10px auto;
-    }
-    .atas div {
         width: 100%;
         margin: 10px auto;
     }
@@ -490,18 +584,33 @@ footer {
         height: 22rem;
         object-fit: cover;
     }
+    .product-grid {
+        width: 100%;
+    }
+    .product-properties {
+        width: 80%;
+        display: block;
+    }
+    .search {
+        margin-top: 5px;
+    }
+    .search button {
+        width: 10%;
+    }
+
+    .atas div {
+        width: 100%;
+        margin: 10px auto;
+    }
     .owl-item img {
         height: 30rem;
         object-fit: cover;
     }
-    .product-grid {
-        width: 100%;
-    }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 660px) {
     .navigation {
-        width: 50%;
+        width: 60%;
     }
     .product {
         width: 90%;
@@ -514,7 +623,7 @@ footer {
 }
 
 /* Handphone */
-@media (max-width: 576px) {
+@media (max-width: 585px) {
     .product-item img {
         max-width: 100%;
         aspect-ratio: 1/1;
@@ -525,7 +634,7 @@ footer {
         margin: 0.5rem;
     }
 }
-@media (max-width: 479px) {
+@media (max-width: 490px) {
     html {
         font-size: 62.5%;
     }
