--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --even: beige;
-    --odd: azure;
+    --even: aliceblue;
+    --odd: #e7f5ff;
     --primary: aliceblue;
     --tes: #f5f5dc;
 }
@@ -38,14 +38,15 @@ html {
 body {
     font-family: Calibri, Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    background-color: var(--odd);
 }
 
 .even {
-    background-color: #d0ebff;
+    background-color: var(--even);
 }
 
 .odd {
-    background-color: #e7f5ff;
+    background-color: var(--odd);
 }
 
 nav {
@@ -58,8 +59,8 @@ nav {
     padding: 1.4rem 10%;
     align-items: center;
     position: fixed;
-    z-index: 1000;
-    box-shadow: 0 0 5px 1px #333;
+    box-shadow: 0 0px 6px 0px #999999;
+    z-index: 100;
 }
 
 .logo a {
@@ -84,7 +85,7 @@ nav {
 
 .navigation li a:hover {
     background-color: #228be6;
-    color: #333;
+    color: var(--odd);
     border-radius: 15px;
     transition: all ease-in-out 0.2s;
 }
@@ -103,7 +104,7 @@ nav {
 .hero {
     min-height: 100vh;
     padding: 1.4rem 10%;
-    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.3) 0%, rgba(51, 51, 51, 0.3) 80%, #e7f5ff);
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.3) 0%, rgba(51, 51, 51, 0.3) 80%, var(--even));
 }
 
 .hero-text {
@@ -133,17 +134,20 @@ nav {
 /* ABOUT US */
 
 .about,
-.product {
+.product,
+.contact {
     padding: 7.5rem 0 1.4rem;
 }
 
 .about {
-    background: linear-gradient(to bottom, #e7f5ff 0%, #e7f5ff 90%, aliceblue);
+    background: linear-gradient(to bottom, var(--even) 0%, var(--even) 90%, var(--odd));
     margin-bottom: 6rem;
 }
 
 .about h2 {
+    padding: 2rem;
     text-align: center;
+    margin: 0 auto;
     margin-bottom: 3rem;
 }
 
@@ -154,7 +158,7 @@ nav {
     justify-content: space-between;
     width: 80%;
     padding: 10px;
-    background-color: #fff;
+    background-color: var(--odd);
     border-radius: 2%;
 }
 
@@ -162,6 +166,7 @@ nav {
     margin: 10px;
 }
 .about-text {
+    line-height: 2rem;
     flex: 1 1 28rem;
 }
 
@@ -195,7 +200,7 @@ nav {
 
 .product {
     width: 90%;
-    margin: 20px auto;
+    margin: 75px auto;
     text-align: center;
 }
 
@@ -210,11 +215,13 @@ nav {
 .product-item {
     margin: 1rem;
     box-shadow: 1px 1px 5px #aaaaaa;
+    /* position: relative; */
 }
 
 .product-item,
 .product-item img {
     border-radius: 5px;
+    position: relative;
 }
 
 .product-item img {
@@ -222,6 +229,14 @@ nav {
     aspect-ratio: 4/3;
     object-fit: cover;
     height: 200px;
+}
+.product-item img:hover::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background-color: #0055ff;
 }
 .product-main {
     align-items: center;
@@ -233,24 +248,72 @@ nav {
     order: 2;
 }
 .product-text {
+    line-height: 2.5rem;
     flex: 1 1 23rem;
     order: 1;
 }
 
+.contact h2 {
+    margin: 2rem 0;
+}
 .contact {
     height: 100vh;
-    text-align: center;
-}
-.contact ul {
-    background-color: #f1f1f1;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    font-size: 5rem;
+    /* background-color: ; */
+    margin: 1rem auto;
     padding: 20px;
 }
-.contact ul li a {
-    margin: 2rem;
+.contact h2,
+.contact p {
+    margin-bottom: 50px;
 }
+.social-icons {
+    /* background-color: #2196f3; */
+    display: flex;
+    justify-content: space-evenly;
+    width: 90%;
+}
+
+.social-icons li {
+    background-color: #0b7dda;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px #aaaaaa;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    list-style: none;
+    text-align: center;
+}
+.social-icons a {
+    padding: 2rem;
+    border-radius: 5px;
+    background-color: var(--even);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    transition: all 0.2s ease-in-out;
+    font-size: 60px;
+}
+.social-icons a span {
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #228be6;
+}
+
+.social-icons a:hover {
+    filter: brightness(150%);
+    transform: translateY(-7px);
+}
+
+.social-icons i {
+    margin-bottom: 10px;
+}
+
 .fa-facebook {
     color: #0055ff;
 }
@@ -276,10 +339,10 @@ footer {
     right: 0;
     font-size: 3rem;
     padding: 0.8rem 1rem;
-    background-color: #d8d7d7;
+    background-color: #e1e1e1;
     color: #17a900;
     border: 1px solid #11ff00;
-    box-shadow: 0 0px 10px 0 #292929;
+    box-shadow: 0 0px 10px 0 #8f8f8fb4;
     border-radius: 20px;
     margin: 20px;
     transition: 0.2s;
@@ -288,7 +351,7 @@ footer {
     transform: translate(0, -15%);
     background-color: #f1f1f1;
     color: #11ff00;
-    box-shadow: 0 0px 10px 0 #c8c8c8;
+    box-shadow: 0 0px 10px 0 #e7e7e7;
     text-shadow: 0 0 3px #e9e9e9;
 }
 .nav-footer a {
@@ -319,6 +382,10 @@ footer {
     padding: 1em;
     border-radius: 7px;
     font-size: 1rem;
+}
+.btn-delete {
+    background-color: #ff0000;
+    color: #ededed;
 }
 .btn-delete {
     background-color: #ff0000;
@@ -528,6 +595,9 @@ footer {
     .product-main {
         flex-wrap: wrap;
     }
+    .social-icons li {
+        flex-wrap: wrap;
+    }
 }
 
 /* Tablet */
@@ -547,7 +617,7 @@ footer {
         height: 100vh;
         top: 0;
         left: -100%;
-        background-color: rgba(51, 51, 51, 0.7);
+        background-color: var(--odd);
         transition: 0.3s;
     }
     .navigation.active {
@@ -559,11 +629,11 @@ footer {
     }
 
     .navigation li a {
-        color: #e7f5ff;
+        color: #303030;
     }
     .navigation li a:hover {
         padding: 10px 15px;
-        background-color: inherit;
+        /* background-color: inherit; */
     }
     .openbtn {
         display: inline;
